WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136240
Crashes in hit testing under WebPage::determinePrimarySnapshottedPlugIn()
https://bugs.webkit.org/show_bug.cgi?id=136240
Summary
Crashes in hit testing under WebPage::determinePrimarySnapshottedPlugIn()
Simon Fraser (smfr)
Reported
2014-08-25 17:19:15 PDT
Crashes in hit testing under WebPage::determinePrimarySnapshottedPlugIn()
Attachments
Patch
(1.45 KB, patch)
2014-08-25 17:20 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-08-25 17:20:08 PDT
Created
attachment 237120
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-08-25 17:21:27 PDT
rdar://problem/17231462
Simon Fraser (smfr)
Comment 3
2014-08-26 11:55:42 PDT
https://trac.webkit.org/r172968
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug