Crashes in hit testing under WebPage::determinePrimarySnapshottedPlugIn() https://bugs.webkit.org/show_bug.cgi?id=136240 rdar://problem/17231462

Reviewed by Darin Adler.

determinePrimarySnapshottedPlugIn() does render tree hit testing, so needs
to ensure that layout is up-to-date.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::determinePrimarySnapshottedPlugIn):

Canonical link: https://commits.webkit.org/154081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172968 268f45cc-cd09-0410-ab3c-d52691b4dbfc